--- a/themes/iterm2.conf
+++ b/themes/iterm2.conf
@@ -1,22 +1,22 @@
 # Pre-converted iTerm2 themes
 # Format: theme-name|bg=#hexcolor,fg=#hexcolor|display-name
-3024%20Day|bg=#f7f7f7,fg=#4a4543|3024%20Day
-3024%20Night|bg=#090300,fg=#a5a2a2|3024%20Night
-Adventure%20Time|bg=#1f1d45,fg=#f8dcc0|Adventure%20Time
+3024 Day|bg=#f7f7f7,fg=#4a4543|3024 Day
+3024 Night|bg=#090300,fg=#a5a2a2|3024 Night
+Adventure Time|bg=#1f1d45,fg=#f8dcc0|Adventure Time
 Afterglow|bg=#212121,fg=#d0d0d0|Afterglow
-Alien%20Blood|bg=#0f1610,fg=#637d75|Alien%20Blood
+Alien Blood|bg=#0f1610,fg=#637d75|Alien Blood
 Argonaut|bg=#0e1019,fg=#fffaf4|Argonaut
 Arthur|bg=#1c1c1c,fg=#ddeedd|Arthur
-Atelier%20Sulphurpool|bg=#202746,fg=#979db4|Atelier%20Sulphurpool
-Atom%20One%20Light|bg=#f9f9f9,fg=#2a2c33|Atom%20One%20Light
+Atelier Sulphurpool|bg=#202746,fg=#979db4|Atelier Sulphurpool
+Atom One Light|bg=#f9f9f9,fg=#2a2c33|Atom One Light
 Atom|bg=#161719,fg=#c5c8c6|Atom
-Belafonte%20Day|bg=#d5ccba,fg=#45373c|Belafonte%20Day
-Belafonte%20Night|bg=#20111b,fg=#968c83|Belafonte%20Night
-Birds%20Of%20Paradise|bg=#2a1f1d,fg=#e0dbb7|Birds%20Of%20Paradise
+Belafonte Day|bg=#d5ccba,fg=#45373c|Belafonte Day
+Belafonte Night|bg=#20111b,fg=#968c83|Belafonte Night
+Birds Of Paradise|bg=#2a1f1d,fg=#e0dbb7|Birds Of Paradise
 Blazer|bg=#0d1926,fg=#d9e6f2|Blazer
 Borland|bg=#0000a4,fg=#ffff4e|Borland
 Box|bg=#141d2b,fg=#9fef00|Box
-Bright%20Lights|bg=#191919,fg=#b3c9d7|Bright%20Lights
+Bright Lights|bg=#191919,fg=#b3c9d7|Bright Lights
 Broadcast|bg=#2b2b2b,fg=#e6e1dc|Broadcast
 Brogrammer|bg=#131313,fg=#d6dbe5|Brogrammer
 C64|bg=#40318d,fg=#7869c4|C64
@@ -25,40 +25,40 @@ Carbonfox|bg=#161616,fg=#f2f4f8|Carbonfox
 Chalk|bg=#2b2d2e,fg=#d2d8d9|Chalk
 Chalkboard|bg=#29262f,fg=#d9e6f2|Chalkboard
 Ciapre|bg=#191c27,fg=#aea47a|Ciapre
-Cobalt%20Neon|bg=#142838,fg=#8ff586|Cobalt%20Neon
+Cobalt Neon|bg=#142838,fg=#8ff586|Cobalt Neon
 Cobalt2|bg=#132738,fg=#ffffff|Cobalt2
-Crayon%20Pony%20Fish|bg=#150707,fg=#68525a|Crayon%20Pony%20Fish
-Cutie%20Pro|bg=#181818,fg=#d5d0c9|Cutie%20Pro
-Dark%20Pastel|bg=#000000,fg=#ffffff|Dark%20Pastel
+Crayon Pony Fish|bg=#150707,fg=#68525a|Crayon Pony Fish
+Cutie Pro|bg=#181818,fg=#d5d0c9|Cutie Pro
+Dark Pastel|bg=#000000,fg=#ffffff|Dark Pastel
 Darkside|bg=#222324,fg=#bababa|Darkside
 Dawnfox|bg=#faf4ed,fg=#575279|Dawnfox
 Dayfox|bg=#f6f2ee,fg=#3d2b5a|Dayfox
 Desert|bg=#333333,fg=#ffffff|Desert
 Dimidium|bg=#141414,fg=#bab7b6|Dimidium
-Dimmed%20Monokai|bg=#1f1f1f,fg=#b9bcba|Dimmed%20Monokai
-Django%20Reborn%20Again|bg=#051f14,fg=#dadedc|Django%20Reborn%20Again
-Django%20Smooth|bg=#245032,fg=#f8f8f8|Django%20Smooth
+Dimmed Monokai|bg=#1f1f1f,fg=#b9bcba|Dimmed Monokai
+Django Reborn Again|bg=#051f14,fg=#dadedc|Django Reborn Again
+Django Smooth|bg=#245032,fg=#f8f8f8|Django Smooth
 Django|bg=#0b2f20,fg=#f8f8f8|Django
-Duotone%20Dark|bg=#1f1d27,fg=#b7a1ff|Duotone%20Dark
+Duotone Dark|bg=#1f1d27,fg=#b7a1ff|Duotone Dark
 Duskfox|bg=#232136,fg=#e0def4|Duskfox
 ENCOM|bg=#000000,fg=#00a595|ENCOM
 Earthsong|bg=#292520,fg=#e5c7a9|Earthsong
 Elemental|bg=#22211d,fg=#807a74|Elemental
-Embers%20Dark|bg=#16130f,fg=#a39a90|Embers%20Dark
-Espresso%20Libre|bg=#2a211c,fg=#b8a898|Espresso%20Libre
+Embers Dark|bg=#16130f,fg=#a39a90|Embers Dark
+Espresso Libre|bg=#2a211c,fg=#b8a898|Espresso Libre
 Espresso|bg=#323232,fg=#ffffff|Espresso
 Everblush|bg=#141b1e,fg=#dadada|Everblush
-Farmhouse%20Dark|bg=#1d2027,fg=#e8e4e1|Farmhouse%20Dark
-Farmhouse%20Light|bg=#e8e4e1,fg=#1d2027|Farmhouse%20Light
-Firefox%20Dev|bg=#0e1011,fg=#7c8fa4|Firefox%20Dev
+Farmhouse Dark|bg=#1d2027,fg=#e8e4e1|Farmhouse Dark
+Farmhouse Light|bg=#e8e4e1,fg=#1d2027|Farmhouse Light
+Firefox Dev|bg=#0e1011,fg=#7c8fa4|Firefox Dev
 Firewatch|bg=#1e2027,fg=#9ba2b2|Firewatch
-Fish%20Tank|bg=#232537,fg=#ecf0fe|Fish%20Tank
+Fish Tank|bg=#232537,fg=#ecf0fe|Fish Tank
 Flat|bg=#002240,fg=#2cc55d|Flat
 Flatland|bg=#1d1f21,fg=#b8dbef|Flatland
-Flexoki%20Dark|bg=#100f0f,fg=#cecdc3|Flexoki%20Dark
-Flexoki%20Light|bg=#fffcf0,fg=#100f0f|Flexoki%20Light
-Front%20End%20Delight|bg=#1b1c1d,fg=#adadad|Front%20End%20Delight
-Fun%20Forrest|bg=#251200,fg=#dec165|Fun%20Forrest
+Flexoki Dark|bg=#100f0f,fg=#cecdc3|Flexoki Dark
+Flexoki Light|bg=#fffcf0,fg=#100f0f|Flexoki Light
+Front End Delight|bg=#1b1c1d,fg=#adadad|Front End Delight
+Fun Forrest|bg=#251200,fg=#dec165|Fun Forrest
 Galaxy|bg=#1d2837,fg=#ffffff|Galaxy
 Galizur|bg=#071317,fg=#ddeeff|Galizur
 GitHub|bg=#f4f4f4,fg=#3e3e3e|GitHub
@@ -69,81 +69,81 @@ Hacktober|bg=#141414,fg=#c9c9c9|Hacktober
 Hardcore|bg=#121212,fg=#a0a0a0|Hardcore
 Harper|bg=#010101,fg=#a8a49d|Harper
 Highway|bg=#222225,fg=#ededed|Highway
-Hipster%20Green|bg=#100b05,fg=#84c138|Hipster%20Green
+Hipster Green|bg=#100b05,fg=#84c138|Hipster Green
 Homebrew|bg=#000000,fg=#00ff00|Homebrew
 Hopscotch.256|bg=#322931,fg=#b9b5b8|Hopscotch.256
 Hopscotch|bg=#322931,fg=#b9b5b8|Hopscotch
 Hurtado|bg=#000000,fg=#dbdbdb|Hurtado
 Hybrid|bg=#161719,fg=#b7bcba|Hybrid
-IC%20Orange%20PPL|bg=#262626,fg=#ffcb83|IC%20Orange%20PPL
-IR%20Black|bg=#000000,fg=#f1f1f1|IR%20Black
-Idle%20Toes|bg=#323232,fg=#ffffff|Idle%20Toes
-Jackie%20Brown|bg=#2c1d16,fg=#ffcc2f|Jackie%20Brown
+IC Orange PPL|bg=#262626,fg=#ffcb83|IC Orange PPL
+IR Black|bg=#000000,fg=#f1f1f1|IR Black
+Idle Toes|bg=#323232,fg=#ffffff|Idle Toes
+Jackie Brown|bg=#2c1d16,fg=#ffcc2f|Jackie Brown
 Japanesque|bg=#1e1e1e,fg=#f7f6ec|Japanesque
 Jellybeans|bg=#121212,fg=#dedede|Jellybeans
-JetBrains%20Darcula|bg=#202020,fg=#adadad|JetBrains%20Darcula
+JetBrains Darcula|bg=#202020,fg=#adadad|JetBrains Darcula
 Kibble|bg=#0e100a,fg=#f7f7f7|Kibble
 Konsolas|bg=#060606,fg=#c8c1c1|Konsolas
-Later%20This%20Evening|bg=#222222,fg=#959595|Later%20This%20Evening
+Later This Evening|bg=#222222,fg=#959595|Later This Evening
 Lavandula|bg=#050014,fg=#736e7d|Lavandula
-Liquid%20Carbon%20Transparent|bg=#000000,fg=#afc2c2|Liquid%20Carbon%20Transparent
-Liquid%20Carbon|bg=#303030,fg=#afc2c2|Liquid%20Carbon
-Man%20Page|bg=#fef49c,fg=#000000|Man%20Page
-Material%20Dark|bg=#232322,fg=#e5e5e5|Material%20Dark
-Material%20Design%20Colors|bg=#1d262a,fg=#e7ebed|Material%20Design%20Colors
+Liquid Carbon Transparent|bg=#000000,fg=#afc2c2|Liquid Carbon Transparent
+Liquid Carbon|bg=#303030,fg=#afc2c2|Liquid Carbon
+Man Page|bg=#fef49c,fg=#000000|Man Page
+Material Dark|bg=#232322,fg=#e5e5e5|Material Dark
+Material Design Colors|bg=#1d262a,fg=#e7ebed|Material Design Colors
 Material|bg=#eaeaea,fg=#232322|Material
 Mathias|bg=#000000,fg=#bbbbbb|Mathias
 Medallion|bg=#1d1908,fg=#cac296|Medallion
-Melange%20Dark|bg=#292522,fg=#ece1d7|Melange%20Dark
-Melange%20Light|bg=#f1f1f1,fg=#54433a|Melange%20Light
+Melange Dark|bg=#292522,fg=#ece1d7|Melange Dark
+Melange Light|bg=#f1f1f1,fg=#54433a|Melange Light
 Misterioso|bg=#2d3743,fg=#e1e1e0|Misterioso
 Molokai|bg=#121212,fg=#bbbbbb|Molokai
-Mona%20Lisa|bg=#120b0d,fg=#f7d66a|Mona%20Lisa
-Monokai%20Soda|bg=#1a1a1a,fg=#c4c5b5|Monokai%20Soda
+Mona Lisa|bg=#120b0d,fg=#f7d66a|Mona Lisa
+Monokai Soda|bg=#1a1a1a,fg=#c4c5b5|Monokai Soda
 N0Tch2K|bg=#222222,fg=#a0a0a0|N0Tch2K
 Neopolitan|bg=#271f19,fg=#ffffff|Neopolitan
 Neutron|bg=#1c1e22,fg=#e6e8ef|Neutron
-Night%20Lion%20V1|bg=#000000,fg=#bbbbbb|Night%20Lion%20V1
-Night%20Lion%20V2|bg=#171717,fg=#bbbbbb|Night%20Lion%20V2
-Night%20Owlish%20Light|bg=#ffffff,fg=#403f53|Night%20Owlish%20Light
+Night Lion V1|bg=#000000,fg=#bbbbbb|Night Lion V1
+Night Lion V2|bg=#171717,fg=#bbbbbb|Night Lion V2
+Night Owlish Light|bg=#ffffff,fg=#403f53|Night Owlish Light
 Nightfox|bg=#192330,fg=#cdcecf|Nightfox
 Nordfox|bg=#2e3440,fg=#cdcecf|Nordfox
 Novel|bg=#dfdbc3,fg=#3b2322|Novel
 Obsidian|bg=#283033,fg=#cdcdcd|Obsidian
 Ocean|bg=#224fbc,fg=#ffffff|Ocean
-Oceanic%20Material|bg=#1c262b,fg=#c2c8d7|Oceanic%20Material
+Oceanic Material|bg=#1c262b,fg=#c2c8d7|Oceanic Material
 Ollie|bg=#222125,fg=#8a8dae|Ollie
-Paraiso%20Dark|bg=#2f1e2e,fg=#a39e9b|Paraiso%20Dark
-Paul%20Millr|bg=#000000,fg=#f2f2f2|Paul%20Millr
-Pencil%20Dark|bg=#212121,fg=#f1f1f1|Pencil%20Dark
-Pencil%20Light|bg=#f1f1f1,fg=#424242|Pencil%20Light
+Paraiso Dark|bg=#2f1e2e,fg=#a39e9b|Paraiso Dark
+Paul Millr|bg=#000000,fg=#f2f2f2|Paul Millr
+Pencil Dark|bg=#212121,fg=#f1f1f1|Pencil Dark
+Pencil Light|bg=#f1f1f1,fg=#424242|Pencil Light
 Peppermint|bg=#000000,fg=#c8c8c8|Peppermint
-Piatto%20Light|bg=#ffffff,fg=#414141|Piatto%20Light
+Piatto Light|bg=#ffffff,fg=#414141|Piatto Light
 Pnevma|bg=#1c1c1c,fg=#d0d0d0|Pnevma
 Pro|bg=#000000,fg=#f2f2f2|Pro
-Red%20Alert|bg=#762423,fg=#ffffff|Red%20Alert
-Red%20Sands|bg=#7a251e,fg=#d7c9a7|Red%20Sands
-Retro%20Legends|bg=#0d0d0d,fg=#45eb45|Retro%20Legends
+Red Alert|bg=#762423,fg=#ffffff|Red Alert
+Red Sands|bg=#7a251e,fg=#d7c9a7|Red Sands
+Retro Legends|bg=#0d0d0d,fg=#45eb45|Retro Legends
 Rippedcasts|bg=#2b2b2b,fg=#ffffff|Rippedcasts
-Rose%20Pine%20Dawn|bg=#faf4ed,fg=#575279|Rose%20Pine%20Dawn
-Rose%20Pine%20Moon|bg=#232136,fg=#e0def4|Rose%20Pine%20Moon
-Rose%20Pine|bg=#191724,fg=#e0def4|Rose%20Pine
+Rose Pine Dawn|bg=#faf4ed,fg=#575279|Rose Pine Dawn
+Rose Pine Moon|bg=#232136,fg=#e0def4|Rose Pine Moon
+Rose Pine|bg=#191724,fg=#e0def4|Rose Pine
 Royal|bg=#100815,fg=#514968|Royal
-Sea%20Shells|bg=#09141b,fg=#deb88d|Sea%20Shells
-Seafoam%20Pastel|bg=#243435,fg=#d4e7d4|Seafoam%20Pastel
+Sea Shells|bg=#09141b,fg=#deb88d|Sea Shells
+Seafoam Pastel|bg=#243435,fg=#d4e7d4|Seafoam Pastel
 Seti|bg=#111213,fg=#cacecd|Seti
 Shaman|bg=#001015,fg=#405555|Shaman
 Slate|bg=#222222,fg=#35b1d2|Slate
 Smyck|bg=#1b1b1b,fg=#f7f7f7|Smyck
-Soft%20Server|bg=#242626,fg=#99a3a2|Soft%20Server
-Solarized%20Darcula|bg=#3d3f41,fg=#d2d8d9|Solarized%20Darcula
-Solarized%20Dark%20Higher%20Contrast|bg=#001e27,fg=#9cc2c3|Solarized%20Dark%20Higher%20Contrast
-Solarized%20Dark%20Patched|bg=#001e27,fg=#708284|Solarized%20Dark%20Patched
+Soft Server|bg=#242626,fg=#99a3a2|Soft Server
+Solarized Darcula|bg=#3d3f41,fg=#d2d8d9|Solarized Darcula
+Solarized Dark Higher Contrast|bg=#001e27,fg=#9cc2c3|Solarized Dark Higher Contrast
+Solarized Dark Patched|bg=#001e27,fg=#708284|Solarized Dark Patched
 Sonokai|bg=#2c2e34,fg=#e2e2e3|Sonokai
 Spacedust|bg=#0a1e24,fg=#ecf0c1|Spacedust
-Spacegray%20Bright|bg=#2a2e3a,fg=#f3f3f3|Spacegray%20Bright
-Spacegray%20Eighties%20Dull|bg=#222222,fg=#c9c6bc|Spacegray%20Eighties%20Dull
-Spacegray%20Eighties|bg=#222222,fg=#bdbaae|Spacegray%20Eighties
+Spacegray Bright|bg=#2a2e3a,fg=#f3f3f3|Spacegray Bright
+Spacegray Eighties Dull|bg=#222222,fg=#c9c6bc|Spacegray Eighties Dull
+Spacegray Eighties|bg=#222222,fg=#bdbaae|Spacegray Eighties
 Spacegray|bg=#20242d,fg=#b3b8c3|Spacegray
 Spring|bg=#ffffff,fg=#4d4d4c|Spring
 Square|bg=#1a1a1a,fg=#acacab|Square
@@ -152,27 +152,27 @@ Sublette|bg=#202535,fg=#ccced0|Sublette
 Sugarplum|bg=#111147,fg=#db7ddd|Sugarplum
 Sundried|bg=#1a1818,fg=#c9c9c9|Sundried
 Symfonic|bg=#000000,fg=#ffffff|Symfonic
-Synthwave%20Alpha|bg=#241b30,fg=#f2f2e3|Synthwave%20Alpha
+Synthwave Alpha|bg=#241b30,fg=#f2f2e3|Synthwave Alpha
 Teerb|bg=#262626,fg=#d0d0d0|Teerb
 Terafox|bg=#152528,fg=#e6eaea|Terafox
-Terminal%20Basic%20Dark|bg=#1d1e1d,fg=#ffffff|Terminal%20Basic%20Dark
-Terminal%20Basic|bg=#ffffff,fg=#000000|Terminal%20Basic
-Thayer%20Bright|bg=#1b1d1e,fg=#f8f8f8|Thayer%20Bright
-Tomorrow%20Night%20Blue|bg=#002451,fg=#ffffff|Tomorrow%20Night%20Blue
-Tomorrow%20Night%20Bright|bg=#000000,fg=#eaeaea|Tomorrow%20Night%20Bright
-Tomorrow%20Night%20Eighties|bg=#2d2d2d,fg=#cccccc|Tomorrow%20Night%20Eighties
-Tomorrow%20Night|bg=#1d1f21,fg=#c5c8c6|Tomorrow%20Night
+Terminal Basic Dark|bg=#1d1e1d,fg=#ffffff|Terminal Basic Dark
+Terminal Basic|bg=#ffffff,fg=#000000|Terminal Basic
+Thayer Bright|bg=#1b1d1e,fg=#f8f8f8|Thayer Bright
+Tomorrow Night Blue|bg=#002451,fg=#ffffff|Tomorrow Night Blue
+Tomorrow Night Bright|bg=#000000,fg=#eaeaea|Tomorrow Night Bright
+Tomorrow Night Eighties|bg=#2d2d2d,fg=#cccccc|Tomorrow Night Eighties
+Tomorrow Night|bg=#1d1f21,fg=#c5c8c6|Tomorrow Night
 Tomorrow|bg=#ffffff,fg=#4d4d4c|Tomorrow
-Toy%20Chest|bg=#24364b,fg=#31d07b|Toy%20Chest
+Toy Chest|bg=#24364b,fg=#31d07b|Toy Chest
 Treehouse|bg=#191919,fg=#786b53|Treehouse
 Twilight|bg=#141414,fg=#ffffd4|Twilight
 Ubuntu|bg=#300a24,fg=#eeeeec|Ubuntu
 Urple|bg=#1b1b23,fg=#877a9b|Urple
 Vaughn|bg=#25234f,fg=#dcdccc|Vaughn
-Vibrant%20Ink|bg=#000000,fg=#ffffff|Vibrant%20Ink
-Warm%20Neon|bg=#404040,fg=#afdab6|Warm%20Neon
+Vibrant Ink|bg=#000000,fg=#ffffff|Vibrant Ink
+Warm Neon|bg=#404040,fg=#afdab6|Warm Neon
 Wez|bg=#000000,fg=#b3b3b3|Wez
-Wild%20Cherry|bg=#1f1726,fg=#dafaff|Wild%20Cherry
+Wild Cherry|bg=#1f1726,fg=#dafaff|Wild Cherry
 Wombat|bg=#171717,fg=#dedacf|Wombat
 Wryan|bg=#101010,fg=#999993|Wryan
 Zenburn|bg=#3f3f3f,fg=#dcdccc|Zenburn
